# WhatsappBusinessManager

./: .env  .gitignore  check_products.py  create_product.py  package-lock.json  pyproject.toml  test_alerts.py  test_appointments.py  test_booking_direct.py  test_query.py
app/: main.py
app/core/: auth.py  config.py  database.py  security.py
app/models/: __init__.py  appointment.py  base.py  business.py  conversation.py  employee_schedule.py  employee_service.py  product.py  purchase_order.py  service.py  stock.py  supplier.py  user.py
app/schemas/: albaran.py
app/workers/: albaran_worker.py  alerts_worker.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
migrations/: env.py
migrations/versions/: 0cb49d880843_add_services_and_schedules.py  2002c9b32491_add_pgvector_extension_and_index.py  5d1f91b9a338_add_expiry_lot_to_stock_movements.py  8a1f3c5e9d21_add_service_id_to_appointments.py  c3f8a91b2e04_widen_llm_columns.py  d4e2b7c19a03_employee_schedules_date_not_recurring.py  eef3e4ce40bf_initial_schema.py
scripts/: link_cognito_user.py
tests/integration/: test_albaran_flow.py  test_inventory_service.py
tests/unit/: test_admin_appointments_api.py  test_admin_employees_api.py  test_admin_me_api.py  test_admin_onboarding_api.py  test_admin_products_api.py  test_albaran_schemas.py  test_albaran_worker.py  test_alerts_worker.py  test_appointment_lookup_service.py  test_assistant_handler.py  test_auth.py  (+14 more)
whatsapp_business_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+42 files in other folders)
