[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whatsapp-business-manager"
version = "0.1.0"
description = "SaaS B2B multi-tenant WhatsApp Business Manager"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",

    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",

    # Cache / sessions
    "redis>=5.0.0",

    # Task queue
    "celery>=5.4.0",
    "celery[sqs]>=5.4.0",

    # AWS
    "boto3>=1.34.0",

    # AI
    "anthropic>=0.28.0",
    "openai>=1.30.0",

    # Messaging
    "twilio>=9.0.0",

    # Utilities
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]